# ichtyodisco

./: .gitignore  main.py  pyproject.toml
docs/: decision-log.md
src/aquarium/capture/: webcam_capture.py
