[project]
name = "ichtyodisco"
version = "0.1.0"
description = "Real-time aquarium ML tracking with sound synthesis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "python-osc>=1.9.3",
    "ultralytics>=8.3.235",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
